welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:2: error: not found: value &&
  	&& (getY() == getMondeHauteur() - 1)
        ^ZigZag:22: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
  ecritMessage()
  ^ZigZag:25: error: not enough arguments for method avanceZigZag: (oldX: Int, oldY: Int)Unit.
Unspecified value parameters oldX, oldY.
    avanceZigZag()
                ^ZigZag:29: error: overloaded method value ecritMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
    ecritMessage()
    ^